# beep-effect

./: .aiignore  .env.example  .fallowrc.jsonc  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .graphifyignore  .lintstagedrc.js  .lintstagedrc.json  .madgerc  .markdownlint-cli2.jsonc  .mcp.json  .npmrc  .oxlintrc.json  .pre-commit-hooks.yaml  .semgrepignore  .tmp-effect-env-test.ts  .tmp-service-variance-test.ts  .trivyignore  .vercelignore  .windsurfrules  ADMIN_CLIENT_WORKING_NOTES.md  AGENTS.md  AGENTS.md.beep-sync.bak  AGENTS_MD_TO_UPDATE.md  ARCHITECTURE_COMPENDIUM.md  ARCHITECTURE_MIGRATION_REVIEW.md  BETTER_AUTH_CLIENT_AND_METHODS_LIST.md  BETTER_AUTH_CLIENT_METHOD_PROCESS.md  BETTER_AUTH_CLUSTER_PROMPTS.md  BETTER_AUTH_CONTRACTS_AND_HANDLERS_PROMPT.md  BETTER_AUTH_PARALLEL_PLAYBOOK.md  BETTER_AUTH_PLUGIN_EXECUTION_CHECKLIST_PROMPT.txt  BETTER_AUTH_SCRATCH_PROMPT.md  BUN_MIGRATION.md  BUN_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRACTKIT_FAILURE_CONTINUATION_PROMPT.md  (+144 more)
.ai/: .lnai-manifest.json
.aiassistant/: codex-quality-handoff-prompt.txt
.beep/: README.md  config.yaml
.changeset/: agent-effectiveness-phase1.md  agent-reflection-loop-quality.md  agents-assistant-content-compat.md  ai-metrics-main-sync.md  ai-metrics-otlp-preflight.md  ai-metrics-p2-durable-storage.md  ai-metrics-p6a-hardening.md  ai-metrics-p7.md  ai-metrics-stack.md  big-results-train.md  blue-cups-share.md  blue-points-ring.md  bold-sides-wink.md  box-generator-driver.md  bright-editors-settle.md  bright-sets-arrive.md  bright-wombats-harden.md  calm-bears-jump.md  calm-cups-boil.md  calm-law-cleanup.md  calm-pacer-contracts.md  calm-yeet-path.md  canonical-slice-factory-v1-closure.md  canonical-slice-factory.md  canvas-bootstrap-closure.md  chalk-restore-options-constructor.md  chat-contract-plaintext-coverage.md  chat-surface-parity.md  chatty-months-rhyme.md  clever-knives-cut.md  cli-native-preview-setup.md  config.json  crispen-batch-schema-first.md  dedup-clone-engine-closeout.md  deps-catalog-june-11.md  deps-catalog-june-26.md  deps-catalog-june-27.md  desktop-chat-qa-effect-cleanup.md  desktop-chat-surface.md  discriminated-union-modeling.md  (+117 more)
.circleci/: config.yml
.claude/: .hook-state.json  CLAUDE.md  REFACTORING_PLAN.md  agents-manifest.yaml  package.json  settings.json  settings.local.json  tsconfig.json  vitest.config.ts
.codex/: .hook-state.json  README.md  config.toml  hooks.json  package.json  tsconfig.json
.cspell/: alt-languages.txt  company-names.txt  custom-words.txt  effect-terms.txt  misspelled.txt  names.txt  tech-terms.txt  third-party.txt
.cursor/: README.md
.github/: dependabot.yaml
.husky/: pre-commit
.lsmcp/: config.json
.next/: trace-build
.patterns/: README.md  beep-effect-repository-development.md  effect-library-development.md  error-handling.md  jsdoc-documentation.md  module-organization.md  testing-patterns.md
.playwright-cli/: page-2026-04-05T03-12-15-786Z.yml  page-2026-04-05T03-12-43-314Z.yml  page-2026-04-05T03-16-25-031Z.yml  page-2026-04-05T03-16-41-626Z.yml  page-2026-04-05T03-17-01-187Z.yml  page-2026-04-05T03-30-50-070Z.yml  page-2026-04-05T03-31-04-623Z.yml  page-2026-04-05T03-31-18-319Z.yml  page-2026-04-05T04-44-05-540Z.yml  page-2026-04-05T04-44-21-282Z.yml  page-2026-04-05T06-00-09-159Z.yml  page-2026-04-05T06-00-24-645Z.yml  page-2026-04-05T06-00-40-780Z.yml  page-2026-04-05T06-00-49-232Z.yml  page-2026-04-10T06-11-26-048Z.yml  page-2026-05-01T10-02-28-630Z.yml  page-2026-05-01T10-03-11-872Z.yml  page-2026-05-01T10-03-20-643Z.yml  page-2026-05-01T10-04-02-924Z.yml  page-2026-05-01T10-04-13-650Z.yml  (+15 more)
.repos/agnix/crates/agnix-rules/: Cargo.toml  README.md
.repos/agnix/crates/agnix-rules/tests/: parity.rs
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/editor-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor-app/src-tauri/capabilities/: default.json
apps/editor-app/src-tauri/src/: lib.rs  main.rs
apps/professional-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/professional-desktop/src-tauri/capabilities/: default.json
apps/professional-desktop/src-tauri/src/: lib.rs  main.rs
apps/stack-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/stack-installer/src-tauri/capabilities/: default.json
apps/stack-installer/src-tauri/src/: lib.rs  main.rs
crates/agnix-wasm/: Cargo.toml
crates/agnix-wasm/tests/: wasm.rs
docs/: cli.md  (+20 more)
(+28766 files in other folders)
