[package]
name = "professional-desktop"
version = "0.0.0"
description = "Professional Desktop shell"
authors = ["kriegcloud"]
edition = "2021"

[lib]
name = "professional_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
