[package]
name = "stack-installer"
version = "0.0.0"
description = "Stack Installer desktop shell"
authors = ["kriegcloud"]
edition = "2021"

[lib]
name = "stack_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
